--- a/MyTradeMTG/Views/Admin/AdvanceDeduction.cshtml
+++ b/MyTradeMTG/Views/Admin/AdvanceDeduction.cshtml
@@ -130,9 +130,11 @@
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
 <link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
+<script src="~/plugins/flatpickr/flatpickr.js"></script>
+<script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script>
     var f3 = flatpickr(document.getElementById('TransactionDate'), {
-        //mode: "range"
+        dateFormat: "d/m/y",
     });
     function validate() {
         if ($('#LoginId').val() == '') {
